--- a/html_advanced/3-index.html
+++ b/html_advanced/3-index.html
@@ -13,7 +13,7 @@
 <body>
     <header>Header</header>
     <main>
-        Main context
+        Main content
     </main>
     <footer>
         Footer
