--- a/html_advanced/8-index.html
+++ b/html_advanced/8-index.html
@@ -11,8 +11,11 @@
 </head>
 
 <body>
-    <header>Header</header>
+    <header>
+        <nav></nav>
+    </header>
     <main>
+        <h1>Homepage</h1>
         <section>Hero section</section>
         <section>
             Services section
