--- a/html_advanced/9-index.html
+++ b/html_advanced/9-index.html
@@ -21,15 +21,15 @@
         </section>
         <section>
             <h2>Services</h2>
+        </section>
+        <section>
+            <h2>Works</h2>
             <article>Work 1</article>
             <article>Work 2</article>
             <article>Work 3</article>
         </section>
         <section>
-            <h2>Works</h2>
-        </section>
-        <section>
-            <h2>About</h2>
+            <h2>About us</h2>
         </section>
         <section>
             <h2>Latest news</h2>
