--- a/html_advanced/18-index.html
+++ b/html_advanced/18-index.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en">
+<html lang="en" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta name="description" content="Techium is a digital agency">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon.png">
     <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.png" type="image/png">
 </head>
 
 <body>
+
+    <!-- Header -->
     <header>
         <div>
-            <span>Techium</span>
+            <div>
+                <a href="/">
+                    <span>Techium</span>
+                </a>
+            </div>
             <nav></nav>
         </div>
     </header>
+
+    <!-- Main -->
     <main>
         <h1>Homepage</h1>
+
+        <!-- Hero section -->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
             </div>
         </section>
+
+        <!-- Services section -->
         <section>
             <div>
                 <header>
@@ -40,6 +52,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Works section -->
         <section>
             <div>
                 <header>
@@ -59,6 +73,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- About Us section -->
         <section>
             <div>
                 <header>
@@ -90,12 +106,13 @@
                 </div>
             </div>
         </section>
+
+        <!-- Latest news section -->
         <section>
             <div>
                 <header>
                     <h2>Latest news</h2>
                 </header>
-
                 <div>
                     <article>
                         <p>Career</p>
@@ -125,6 +142,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Testimonials section -->
         <section>
             <div>
                 <header>
@@ -138,6 +157,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Contact section -->
         <section>
             <div>
                 <header>
@@ -151,7 +172,10 @@
                 </div>
             </div>
         </section>
+
     </main>
+
+    <!-- Footer -->
     <footer>
         <div>
             Footer
