--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -1,29 +1,49 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en">
+<html lang="en" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta name="description" content="Techium is a digital agency">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon.png">
     <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.png" type="image/png">
 </head>
 
 <body>
+
+    <!-- Header -->
     <header>
         <div>
-            <span>Techium</span>
-            <nav></nav>
+            <div>
+                <a href="/">
+                    <span>Techium</span>
+                </a>
+            </div>
+            <nav>
+                <a href="/">Home</a>
+                <a href="#services">Services</a>
+                <a href="#works">Works</a>
+                <a href="#about">About</a>
+                <a href="#latest_news">Latest news</a>
+                <a href="#testimonials">Testimonials</a>
+                <a href="#contact">Contact</a>
+            </nav>
         </div>
     </header>
+
+    <!-- Main -->
     <main>
         <h1>Homepage</h1>
+
+        <!-- Hero section -->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
             </div>
         </section>
+
+        <!-- Services section -->
         <section>
             <div>
                 <header>
@@ -40,6 +60,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Works section -->
         <section>
             <div>
                 <header>
@@ -59,6 +81,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- About Us section -->
         <section>
             <div>
                 <header>
@@ -90,12 +114,13 @@
                 </div>
             </div>
         </section>
+
+        <!-- Latest news section -->
         <section>
             <div>
                 <header>
                     <h2>Latest news</h2>
                 </header>
-
                 <div>
                     <article>
                         <p>Career</p>
@@ -125,6 +150,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Testimonials section -->
         <section>
             <div>
                 <header>
@@ -138,6 +165,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Contact section -->
         <section>
             <div>
                 <header>
@@ -151,7 +180,10 @@
                 </div>
             </div>
         </section>
+
     </main>
+
+    <!-- Footer -->
     <footer>
         <div>
             Footer
