--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -127,6 +127,40 @@
                 </p>
             </div>
         </section>
+
+        <!-- Table -->
+        <section>
+            <header>
+                <h2>Table</h2>
+            </header>
+            <table>
+                <caption>hello</caption>
+                <thead>
+                    <tr>
+                        <th scope="col">Title</th>
+                        <th scope="col">Director</th>
+                        <th scope="col">Release Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">sasas</th>
+                        <td>asssa</td>
+                        <td>asssa</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">sasas</th>
+                        <td>asssa</td>
+                        <td>asssa</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">sasas</th>
+                        <td>asssa</td>
+                        <td>asssa</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
     <footer>
     </footer>
