--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -134,7 +134,7 @@
                 <h2>Table</h2>
             </header>
             <table>
-                <caption>hello</caption>
+                <caption>Star Wars Trilogy Data</caption>
                 <thead>
                     <tr>
                         <th scope="col">Title</th>
@@ -144,19 +144,19 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">sasas</th>
-                        <td>asssa</td>
-                        <td>asssa</td>
+                        <th scope="row">Star Wars: Episode IV - A New Hope</th>
+                        <td>George Lucas</td>
+                        <td>May 25th, 1977</td>
                     </tr>
                     <tr>
-                        <th scope="row">sasas</th>
-                        <td>asssa</td>
-                        <td>asssa</td>
+                        <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
+                        <td>Irvin Kershner</td>
+                        <td>May 21st, 1980</td>
                     </tr>
                     <tr>
-                        <th scope="row">sasas</th>
-                        <td>asssa</td>
-                        <td>asssa</td>
+                        <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
+                        <td>Richard Marquand</td>
+                        <td>May 25th, 1983</td>
                     </tr>
                 </tbody>
             </table>
