--- a/html_advanced/38-styleguide.html
+++ b/html_advanced/38-styleguide.html
@@ -193,7 +193,7 @@
                 <h2>Video</h2>
             </header>
 
-            <video width="640" height="360" controls loop
+            <video controls loop
                 poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
                 <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4">
                 <p>Sorry, your browser doesn't support HTML5 video</p>
