--- a/html_advanced/38-styleguide.html
+++ b/html_advanced/38-styleguide.html
@@ -191,13 +191,11 @@
         <section>
             <header>
                 <h2>Video</h2>
+                <video controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
+                    <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4">
+                    Sorry, your browser doesn't support HTML5 video
+                </video>
             </header>
-
-            <video controls loop
-                poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
-                <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4">
-                <p>Sorry, your browser doesn't support HTML5 video</p>
-            </video>
         </section>
     </main>
     <footer>
