--- a/html_advanced/38-styleguide.html
+++ b/html_advanced/38-styleguide.html
@@ -191,11 +191,11 @@
         <section>
             <header>
                 <h2>Video</h2>
-                <video controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
-                    <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4">
-                    Sorry, your browser doesn't support HTML5 video
-                </video>
             </header>
+            <video controls src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" loop
+                poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
+                Sorry, your browser doesn't support HTML5 video
+            </video>
         </section>
     </main>
     <footer>
